# mnemosyne

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  compose.yaml  readme.txt
.zed/: settings.json
src/: config.rs  error.rs  logs.rs  main.rs  tags.rs
src/api/: auth.rs  mod.rs  persons.rs  quotes.rs  sessions.rs  tags.rs  users.rs
src/database/: mod.rs
src/database/migrations/: 2026-02-20--01.sql  2026-03-07--01.sql  2026-04-04--01.sql
src/persons/: mod.rs  names.rs
src/quotes/: lines.rs  mod.rs
src/users/: handle.rs  mod.rs  permissions.rs  sessions.rs  setup.rs
src/users/auth/: implementation.rs  mod.rs
src/web/: input.css  mod.rs  styles.css
src/web/components/: marquee.rs  mod.rs  nav.rs  quote.rs  user_miniprofile.rs
src/web/icons/: mod.rs
src/web/pages/: dashboard.rs  index.rs  login.rs  logs.rs  mod.rs  persons.rs  quotes.rs  settings.rs  tags.rs  users.rs  usersettings.rs
src/web/pages/quotes/: add.rs  line-add-rm.js
src/web/pages/users/: create.rs  profile.rs
