[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
chrono = "0.4.43"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.10.0"
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
uuid = { version = "1.21.0", features = ["serde", "v7"] }
