[package]
name = "mnemosyne"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["form"] }
base32 = "0.5.1"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
env_logger = "0.11.9"
log = "0.4.29"
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.10.0"
rand08 = { version = "0.8.5", package = "rand" }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
strum = { version = "0.27.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
uuid = { version = "1.21.0", features = ["serde", "v7"] }
